# prunable_gnn_codex

./: AGENTS.md  CONVENTIONS.md  README.md  ROADMAP.md  pyproject.toml
configs/base/: default.yaml
configs/datasets/: actor.yaml  amazon_computers.yaml  citeseer.yaml  cora.yaml  cornell.yaml  dblp.yaml  flickr.yaml  pubmed.yaml  reddit.yaml  texas.yaml  wisconsin.yaml
configs/experiments/: diagnostic_gcn_pubmed.yaml  diagnostic_graphsage_pubmed.yaml  example.yaml  flickr_graphsage_l2_h128.yaml  flickr_graphsage_l2_h64.yaml  flickr_graphsage_l3_h128.yaml  flickr_graphsage_l3_h64.yaml  flickr_graphsage_l4_h128.yaml  pipeline_citeseer_graphsage.yaml  pipeline_citeseer_graphsage_learnable_small.yaml  (+7 more)
scripts/: collect_presentation_results.py  compare_datasets.py  debug_check_shapes.py  debug_compare_pruners.py  debug_flickr_sweep_consistency.py  debug_graphsage_behavior.py  debug_phase_metrics.py  run_all_datasets.py  run_flickr_graphsage_sweep.py  run_large_datasets.py  run_presentation_benchmark.sh  summarize_flickr_graphsage_sweep.py
tests/: test_benchmark.py  test_checkpoint_isolation.py  test_config.py  test_data.py  test_dense_pipeline.py  test_large_dataset_configs.py  test_models.py  test_multidataset_pipeline.py  test_multilayer_structured_finetune.py  test_output_dir_naming.py  test_pipeline_full_smoke.py  test_progress_reporting.py  test_pruning.py  test_pruning_diagnostics.py  test_pruning_methods.py  test_smoke.py  test_structured_pruning_runtime_path.py  test_suite_aggregation.py  test_surgery.py  test_task10_finetune_pipeline.py  test_training_smoke.py
(+61 files in other folders)
