[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn_pruning"
version = "0.1.0"
description = "Modular GNN pruning research framework for node classification."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "gnn_pruning contributors" }]
dependencies = [
  "torch>=2.0",
  "torch-geometric>=2.4",
  "pyyaml>=6.0",
  "scikit-learn>=1.0",
  "pandas>=1.5",
  "mlflow>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
